<resources>
    <string name="app_name">AttendanceAppStd</string>
    <string name="attendance_student">Attendance Student</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup_here">Signup Here</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_Up">SIGN UP</string>
    <string name="go_to_login">Go to Login</string>
    <string name="loginTV">LOGIN</string>

    <string name="error_general">Somthing went wrong.</string>
    <string name="error_fail_load_image">Fail to load image</string>
    <string name="error_fail_crop_image">Fail to crop image</string>
    <string name="error_smaller_image">Image is too small. Required image size 100x100 px</string>
    <string name="error_incorrect_file_type">Incorrect file type</string>
    <string name="error_bigger_file">File size is bigger than 10Mb</string>
    <string name="permissions_not_granted">Cancelling, required permissions are not granted</string>
</resources>
