<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<!--this is login activity-->

    <TextView
        android:layout_marginTop="180dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attendance_student"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        android:gravity="center"/>
    <TextView
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginTV"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        android:gravity="center"/>

    <EditText
        android:layout_marginBottom="20dp"
        android:id="@+id/et_email"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/et_password"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_signup"
            android:layout_weight="1"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/signup_here"
            android:focusable="true" />

        <TextView
            android:clickable="true"
            android:id="@+id/tv_forget_password"
            android:text="@string/forget_password"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:focusable="true" />

    </LinearLayout>

</LinearLayout>